--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
     --color-text-tertiary: #8a8f98;
     --color-bg-primary: #000212;
 
-    --background: rgb(0, 2, 18);
+    --background: #010212
     --foreground: #00021200;
 
     --card: 0 0% 100%;
